#425: improvments